2000-08-21  Dave Peticolas  <dave@krondo.com>

	* src/engine/gnc-common.h: remove gncBoolean type and constants.
	Replace all uses with glib versions.

2000-08-12  Dave Peticolas  <dave@krondo.com>

	* src/engine/Transaction.c (xaccSplitSetBaseValue): don't adjust
	the price when the base currency is the security of the account.

2000-08-10  Dave Peticolas  <dave@krondo.com>

	* src/register/table-allgui.c (gnc_table_physical_cell_valid): bug
	fix -- get the virtual cell of the target location before getting
	the cellblock.

2000-08-09  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-utils.c: remove unused code

	* src/gnome/dialog-account.c: new file implementing the
	consolidated account add and account edit windows using glade.

2000-08-07  Dave Peticolas  <dave@krondo.com>

	* src/register/*.c: Use glib memory allocation routines.

	* src/register/cellblock.c: fix memory leaks and use glib memory
	allocation routines.

	* src/register/table-allgui.c: reimplement the Table code using
	glib's dynamic arrays. Clean up the code and homogenize the
	function naming convention.

2000-08-04  Dave Peticolas  <dave@krondo.com>

	* src/register/table-gnome.h: remove unused data members

	* src/register/basiccell.h: remove the pixel_width argument
	to the realize callback, it is no longer used.

	* src/register/table-allgui.c: remove the gnc_table_column_width
	call.

2000-08-07  Rob Browning  <rlb@cs.utexas.edu>

	* src/scm/tip-of-the-day.scm: don't initialize at startup.

	* src/scm/main.scm (gnc:*batch-mode-forms-to-evaluate*): new
	global to hold forms added by --evaluate for execution after
	startup.
	(gnc:main): support --evalutate properly.

	* src/scm/engine-utilities.scm (gnc:transaction-map-splits): moved here.
	(gnc:group-map-accounts): moved here.

	* src/scm/command-line.scm (gnc:*arg-defs*): add --evaluate
	option.  This should be considered beta, and it's not documented
	yet, but it's useful for me right now, we need something like it,